--- a/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
@@ -23,8 +23,7 @@
 
         <div class="dropdown service-links">
             <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-                @*TODO NewAlpha: add resource *@
-                Hilfe &amp; Service &nbsp;
+                @T("Menu.ServiceMenu")
                 <i class="fa fa-caret-down"></i>
             </a>
 
