Added Logo partial & removed header partial

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <header>
                 <div class="menubar-section">
                     <div class="container menubar-container">
-                        @Html.Action("Header", "Common", new { area = "" })
+                        @Html.Action("Menu", "Common", new { area = "" })
                     </div>
                 </div>
                 <div class="shopbar-section">
