--- a/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
@@ -9,9 +9,7 @@
 
 	<!-- LOGO -->
 	<div class="shopbar-col shop-logo">
-		<a class="shop-logo-link" href='@Url.RouteUrl("HomePage")'>
-			<img class="img-fluid shop-logo-img" src="~/Media/Thumbs/0001/0001566.png" alt="SmartStore.NET Demo-Shop" title="SmartStore.NET Demo-Shop">
-		</a>
+		@Html.Action("Logo", "Common", new { area = "" })
 	</div>
 
 	<!-- SEARCH -->
