--- a/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
@@ -14,7 +14,7 @@
     </nav>
     <nav class="menubar-group">
 
-        <a class="menubar-link" href="@Url.RouteUrl("ProductSearch")">@T("Search")</a>
+        <a class="menubar-link" href="@Url.RouteUrl("Search")">@T("Search")</a>
 
         @if (Model.HasContactUsPage)
         {
@@ -147,7 +147,7 @@
         </li>
     }
     <li class="list-inline-item">
-        <a href="@Url.RouteUrl("ProductSearch")">@T("Search")</a>
+        <a href="@Url.RouteUrl("Search")">@T("Search")</a>
     </li>
 	@if (Model.HasContactUsPage)
 	{
