--- a/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
@@ -14,7 +14,7 @@
 
 	<!-- SEARCH -->
 	<div class="shopbar-col shopbar-col--stretch shopbar-search">
-		@Html.Action("SearchBox", "Catalog")
+		@Html.Action("SearchBox", "Search")
 	</div>
 
 	<!-- TOOLS -->
