--- a/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
@@ -22,7 +22,7 @@
     </div>
 
     <div class="page-body">
-        @using (Html.BeginRouteForm("ProductSearch", FormMethod.Get, new { @class = "inline-form" }))
+        @using (Html.BeginRouteForm("Search", FormMethod.Get, new { @class = "inline-form" }))
         {
             <div class="search-input">
 
