--- a/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
@@ -24,6 +24,7 @@
 	</button>
 
 	<div id="instasearch-drop">
+		<div class="instasearch-drop-body clearfix"></div>
 	</div>
 
     @Html.Widget("searchbox")
