--- a/src/Presentation/SmartStore.Web/Views/Shared/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Document.cshtml
@@ -5,89 +5,90 @@
 @using SmartStore.Core.Domain.Localization;
 
 @{
-    var currentUICulture = System.Threading.Thread.CurrentThread.CurrentUICulture;
+	var currentUICulture = System.Threading.Thread.CurrentThread.CurrentUICulture;
 
-    var localizationService = EngineContext.Current.Resolve<ILocalizationService>();
+	var localizationService = EngineContext.Current.Resolve<ILocalizationService>();
 
-    var cssRoot = "~/Themes/Alpha/Content/css/";
-    var jsRoot = "~/Themes/Alpha/Scripts/";
-    var bootstrapJsRoot = "~/Themes/Alpha/Content/bs4/js/";
+	var cssRoot = "~/Themes/Alpha/Content/css/";
+	var jsRoot = "~/Themes/Alpha/Scripts/";
+	var bootstrapJsRoot = "~/Themes/Alpha/Content/bs4/js/";
 
-    // add css assets
-    Html.AppendCssFileParts(
-        cssRoot + "font-awesome.css",
-        cssRoot + "jquery.bootstrap-touchspin.css",
-        cssRoot + "jquery.pnotify.default.css",
-        cssRoot + "jquery.pnotify.default.icons.css");
+	// add css assets
+	Html.AppendCssFileParts(
+		cssRoot + "font-awesome.css",
+		cssRoot + "jquery.bootstrap-touchspin.css",
+		cssRoot + "jquery.pnotify.default.css",
+		cssRoot + "jquery.pnotify.default.icons.css");
 
-    Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-2.7.2.js",
-        "~/Scripts/jquery-2.1.1.js",
-        "~/Scripts/jquery-migrate-1.2.1.js",
-        "~/Scripts/globalize/globalize.js");
+	Html.AppendScriptParts(ResourceLocation.Head,
+		"~/Scripts/modernizr-2.7.2.js",
+		"~/Scripts/jquery-2.1.1.js",
+		"~/Scripts/jquery-migrate-1.2.1.js",
+		"~/Scripts/globalize/globalize.js");
 
-    Html.AddScriptParts(ResourceLocation.Head, true,
-        "~/Scripts/globalize/cultures/globalize.culture.{0}.js".FormatInvariant(currentUICulture.ToString()));
+	Html.AddScriptParts(ResourceLocation.Head, true,
+		"~/Scripts/globalize/cultures/globalize.culture.{0}.js".FormatInvariant(currentUICulture.ToString()));
 
-    Html.AppendScriptParts(ResourceLocation.Foot,
-        // jQuery UI Core
-        "~/Scripts/jquery-ui/effect.js",
-        "~/Scripts/jquery-ui/effect-transfer.js",
-        "~/Scripts/jquery-ui/effect-shake.js",
-        "~/Scripts/jquery-ui/position.js",
-        // jQuery Validation
-        "~/Scripts/jquery.unobtrusive-ajax.js",
-        "~/Scripts/jquery.validate.js",
-        "~/Scripts/jquery.validate.unobtrusive.js",
-        jsRoot + "jquery.validate.unobtrusive.custom.js",
-        // SmartStore system
-        jsRoot + "smartstore.system.js",
-        "~/Scripts/underscore.js",
-        "~/Scripts/underscore.string.js",
-        "~/Scripts/underscore.mixins.js",
-        jsRoot + "smartstore.jquery.utils.js",
-        jsRoot + "jquery.ba-outside-events.js",
-        jsRoot + "jquery.preload.js",
-        jsRoot + "jquery.transit.js",
-        jsRoot + "jquery.menu-aim.js",
-        jsRoot + "jquery.mobile-events.min.js",
-        jsRoot + "smartstore.doAjax.js",
-        jsRoot + "jquery.addeasing.js",
-        jsRoot + "smartstore.eventbroker.js",
-        jsRoot + "smartstore.hacks.js",
-        jsRoot + "smartstore.common.js",
-        // Bootstrap
-        jsRoot + "tether.js",
-        bootstrapJsRoot + "bootstrap.js",
-        // Bootstrap custom
-        bootstrapJsRoot + "bootstrap-datetimepicker.js",
-        bootstrapJsRoot + "bootstrap-typeahead.js",
-        // Shared UI
-        jsRoot + "smartstore.viewport.js",
-        jsRoot + "smartstore.placeholder.js",
-        jsRoot + "select2.js",
-        jsRoot + "smartstore.selectwrapper.js",
-        jsRoot + "smartstore.throbber.js",
-        jsRoot + "smartstore.navbar.js",
-        jsRoot + "smartstore.thumbzoomer.js",
-        jsRoot + "smartstore.column-equalizer.js",
-        jsRoot + "smartstore.shrinkmenu.js",
-        jsRoot + "smartstore.scrollbutton.js",
-        jsRoot + "jquery.pnotify.js",
-        jsRoot + "jquery.bootstrap-touchspin.js",
-        jsRoot + "jquery.scrollTo.js",
-        jsRoot + "jquery.serialScroll.js",
-        jsRoot + "smartstore.globalize.adapter.js",
-        jsRoot + "offcanvas.js",
-        jsRoot + "hammer.js",
+	Html.AppendScriptParts(ResourceLocation.Foot,
+		// jQuery UI Core
+		"~/Scripts/jquery-ui/effect.js",
+		"~/Scripts/jquery-ui/effect-transfer.js",
+		"~/Scripts/jquery-ui/effect-shake.js",
+		"~/Scripts/jquery-ui/position.js",
+		// jQuery Validation
+		"~/Scripts/jquery.unobtrusive-ajax.js",
+		"~/Scripts/jquery.validate.js",
+		"~/Scripts/jquery.validate.unobtrusive.js",
+		jsRoot + "jquery.validate.unobtrusive.custom.js",
+		// SmartStore system
+		jsRoot + "smartstore.system.js",
+		"~/Scripts/underscore.js",
+		"~/Scripts/underscore.string.js",
+		"~/Scripts/underscore.mixins.js",
+		jsRoot + "smartstore.jquery.utils.js",
+		jsRoot + "jquery.ba-outside-events.js",
+		jsRoot + "jquery.preload.js",
+		jsRoot + "jquery.transit.js",
+		jsRoot + "jquery.menu-aim.js",
+		jsRoot + "jquery.mobile-events.min.js",
+		jsRoot + "smartstore.doAjax.js",
+		jsRoot + "jquery.addeasing.js",
+		jsRoot + "smartstore.eventbroker.js",
+		jsRoot + "smartstore.hacks.js",
+		jsRoot + "smartstore.common.js",
+		// Bootstrap
+		jsRoot + "tether.js",
+		bootstrapJsRoot + "bootstrap.js",
+		// Bootstrap custom
+		bootstrapJsRoot + "bootstrap-datetimepicker.js",
+		bootstrapJsRoot + "bootstrap-typeahead.js",
+		// Shared UI
+		jsRoot + "smartstore.viewport.js",
+		jsRoot + "smartstore.placeholder.js",
+		jsRoot + "select2.js",
+		jsRoot + "smartstore.selectwrapper.js",
+		jsRoot + "smartstore.throbber.js",
+		jsRoot + "smartstore.navbar.js",
+		jsRoot + "smartstore.thumbzoomer.js",
+		jsRoot + "smartstore.column-equalizer.js",
+		jsRoot + "smartstore.shrinkmenu.js",
+		jsRoot + "smartstore.scrollbutton.js",
+		jsRoot + "smartstore.keynav.js",
+		jsRoot + "jquery.pnotify.js",
+		jsRoot + "jquery.bootstrap-touchspin.js",
+		jsRoot + "jquery.scrollTo.js",
+		jsRoot + "jquery.serialScroll.js",
+		jsRoot + "smartstore.globalize.adapter.js",
+		jsRoot + "offcanvas.js",
+		jsRoot + "hammer.js",
 
-        // Shop
-        jsRoot + "public.common.js",
-        jsRoot + "public.ajaxcart.js",
-        //jsRoot + "public.shopbar.js",
-        jsRoot + "public.offcanvas-cart.js",
-        jsRoot + "public.product-list-scroller.js",
-        jsRoot + "public.product-filter.js");
+		// Shop
+		jsRoot + "public.common.js",
+		jsRoot + "public.ajaxcart.js",
+		//jsRoot + "public.shopbar.js",
+		jsRoot + "public.offcanvas-cart.js",
+		jsRoot + "public.product-list-scroller.js",
+		jsRoot + "public.product-filter.js");
 }
 <!DOCTYPE html>
 <html @Html.Partial("LanguageAttributes")>
