--- a/src/Presentation/SmartStore.Web/Views/Common/Logo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Logo.cshtml
@@ -7,6 +7,7 @@
         <img src='@Url.Content(Model.LogoUrl.EmptyNull())' 
             alt="@Model.LogoTitle" 
             title="@Model.LogoTitle"
+			class="img-fluid"
             @Html.Attr("width", Model.LogoWidth.ToString(), Model.LogoWidth > 0)
             @Html.Attr("height", Model.LogoHeight.ToString(), Model.LogoHeight > 0) />
     }
