--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_misc.scss
@@ -18,13 +18,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // make heading on homepage bigger and center them
-.page-title h1,
 .page.home-page .block-title {
-        font-size: 2.3rem;
-        font-weight: 100;
-        text-align: center;
-        padding: 2rem 0 1rem 0;
-    }
+    font-size: 2.3rem;
+    padding: 2rem 0 1rem 0;
+    line-height: 1.3;
+}
 
 
 // homepage news
