Added sass version of animate

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -70,6 +70,7 @@ $card-border-color:         rgba(0,0,0, 0.12);*/
 @import "shared/_utils.scss";
 @import "shared/select2/core.scss";
 @import "shared/offcanvas.scss";
+@import "shared/_animate.scss";
 
 // Main
 @import "_shopbar.scss";
